--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,5 +1,6 @@
 .headerContainer {
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
     color: white;
     display: flex;
     flex-direction: column;
@@ -44,6 +45,12 @@
     padding: 15px;
     background-color: transparent;
     z-index: 2;
+}
+
+.headerContainer_burgerMenu, .headerContainer_burgerMenu.open {
+    position: fixed;
+    top: 0;
+    right: 0px;
 }
 
 .headerContainer_burgerMenu:hover {
