--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -1,5 +1,6 @@
 .projectsContainer, .projectsContainer_toolsSection {
     width: 100%;
+    max-width: 100%;
     align-items: center;
     display: flex;
     flex-direction: column;
