--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  display: flex;
+  width: 100%;
   box-sizing: border-box;
   background-color: var(--bg-100);
 }
